@@ -2067,16 +2067,24 @@ WIDGET_DEFAULT = {
         "font_weight": "bold",
         "bar_padding": 0.2,
         "bar_gap": 2,
-        "show_percentage_sign": False,
         "show_temperature": True,
         "font_color_temperature": "#FFFFFF",
         "bkg_color_temperature": "#222222",
         "show_rain": True,
+        "prefix_rain": "Rain",
         "font_color_rain": "#FFFFFF",
         "bkg_color_rain": "#222222",
         "show_wetness": True,
+        "prefix_dry": "Dry",
+        "prefix_wet": "Wet",
         "font_color_wetness": "#FFFFFF",
         "bkg_color_wetness": "#222222",
+        "temperature_trend_interval": 60,
+        "raininess_trend_interval": 60,
+        "wetness_trend_interval": 60,
+        "font_color_trend_constant": "#AAAAAA",
+        "font_color_trend_decreasing": "#44FF00",
+        "font_color_trend_increasing": "#FF4400",
         "column_index_temperature": 1,
         "column_index_rain": 2,
         "column_index_wetness": 3,
